--- a/piano.ui
+++ b/piano.ui
@@ -1,37 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Piano</class>
- <widget class="QMainWindow" name="Piano">
+ <class>piano</class>
+ <widget class="QMainWindow" name="piano">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>905</width>
-    <height>693</height>
+    <width>920</width>
+    <height>690</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Piano</string>
+   <string>piano</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="d1">
+   <widget class="QPushButton" name="d1s">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>240</y>
-      <width>71</width>
-      <height>281</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="c1s">
-    <property name="geometry">
-     <rect>
-      <x>290</x>
-      <y>240</y>
+      <x>360</x>
+      <y>250</y>
       <width>51</width>
       <height>151</height>
      </rect>
@@ -54,14 +41,14 @@
 }</string>
     </property>
     <property name="text">
-     <string/>
+     <string>d1s</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="c5">
+   <widget class="QPushButton" name="B2">
     <property name="geometry">
      <rect>
-      <x>770</x>
-      <y>240</y>
+      <x>120</x>
+      <y>250</y>
       <width>71</width>
       <height>281</height>
      </rect>
@@ -76,96 +63,36 @@
 }</string>
     </property>
     <property name="text">
-     <string>c5</string>
+     <string>B2</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="c1">
+   <widget class="QPushButton" name="d1">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>240</y>
+      <x>310</x>
+      <y>250</y>
       <width>71</width>
       <height>281</height>
      </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="a1s">
-    <property name="geometry">
-     <rect>
-      <x>650</x>
-      <y>240</y>
-      <width>51</width>
-      <height>151</height>
-     </rect>
-    </property>
-    <property name="minimumSize">
-     <size>
-      <width>0</width>
-      <height>0</height>
-     </size>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton{
     /* 按钮文本设置 */
-    color:white;
-    background-color: rgb(0, 0, 0);
     text-align: bottom;			             /* 文本的位置 */
     padding-left: 2px;			  		
     padding-top: 2px;
-    font-size: 30px;
+    font-size: 50px;
 }</string>
     </property>
     <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="a1">
-    <property name="geometry">
-     <rect>
-      <x>600</x>
-      <y>240</y>
-      <width>71</width>
-      <height>281</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="g1">
-    <property name="geometry">
-     <rect>
-      <x>530</x>
-      <y>240</y>
-      <width>71</width>
-      <height>281</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="b1">
-    <property name="geometry">
-     <rect>
-      <x>670</x>
-      <y>240</y>
-      <width>71</width>
-      <height>281</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
+     <string>d1</string>
     </property>
    </widget>
    <widget class="QPushButton" name="A2">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>240</y>
+      <x>50</x>
+      <y>250</y>
       <width>71</width>
       <height>281</height>
      </rect>
@@ -189,11 +116,11 @@
      </size>
     </property>
    </widget>
-   <widget class="QPushButton" name="g1s">
+   <widget class="QPushButton" name="f1s">
     <property name="geometry">
      <rect>
-      <x>580</x>
-      <y>240</y>
+      <x>500</x>
+      <y>250</y>
       <width>51</width>
       <height>151</height>
      </rect>
@@ -216,14 +143,14 @@
 }</string>
     </property>
     <property name="text">
-     <string/>
+     <string>f1s</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="d1s">
+   <widget class="QPushButton" name="a1s">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>240</y>
+      <x>640</x>
+      <y>250</y>
       <width>51</width>
       <height>151</height>
      </rect>
@@ -246,27 +173,14 @@
 }</string>
     </property>
     <property name="text">
-     <string/>
+     <string>a1s</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="e1">
+   <widget class="QPushButton" name="f1">
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>240</y>
-      <width>71</width>
-      <height>281</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="B2">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
-      <y>240</y>
+      <x>450</x>
+      <y>250</y>
       <width>71</width>
       <height>281</height>
      </rect>
@@ -281,14 +195,44 @@
 }</string>
     </property>
     <property name="text">
-     <string>B2</string>
+     <string>f1</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="c1s">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>250</y>
+      <width>51</width>
+      <height>151</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>0</width>
+      <height>0</height>
+     </size>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+    /* 按钮文本设置 */
+    color:white;
+    background-color: rgb(0, 0, 0);
+    text-align: bottom;			             /* 文本的位置 */
+    padding-left: 2px;			  		
+    padding-top: 2px;
+    font-size: 30px;
+}</string>
+    </property>
+    <property name="text">
+     <string>c1s</string>
     </property>
    </widget>
    <widget class="QPushButton" name="A2s">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>240</y>
+      <x>90</x>
+      <y>250</y>
       <width>51</width>
       <height>151</height>
      </rect>
@@ -314,24 +258,162 @@
      <string>A2s</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="f1">
+   <widget class="QSpinBox" name="voicehigh">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>240</y>
+      <x>140</x>
+      <y>130</y>
+      <width>171</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="minimum">
+     <number>-3</number>
+    </property>
+    <property name="maximum">
+     <number>3</number>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="g1">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>250</y>
       <width>71</width>
       <height>281</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+    /* 按钮文本设置 */
+    text-align: bottom;			             /* 文本的位置 */
+    padding-left: 2px;			  		
+    padding-top: 2px;
+    font-size: 50px;
+}</string>
+    </property>
     <property name="text">
-     <string/>
+     <string>g1</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="f1s">
+   <widget class="QPushButton" name="a1">
     <property name="geometry">
      <rect>
-      <x>510</x>
-      <y>240</y>
+      <x>590</x>
+      <y>250</y>
+      <width>71</width>
+      <height>281</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+    /* 按钮文本设置 */
+    text-align: bottom;			             /* 文本的位置 */
+    padding-left: 2px;			  		
+    padding-top: 2px;
+    font-size: 50px;
+}</string>
+    </property>
+    <property name="text">
+     <string>a1</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="c1">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>250</y>
+      <width>71</width>
+      <height>281</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+    /* 按钮文本设置 */
+    text-align: bottom;			             /* 文本的位置 */
+    padding-left: 2px;			  		
+    padding-top: 2px;
+    font-size: 50px;
+}</string>
+    </property>
+    <property name="text">
+     <string>c1</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="c5">
+    <property name="geometry">
+     <rect>
+      <x>760</x>
+      <y>250</y>
+      <width>71</width>
+      <height>281</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+    /* 按钮文本设置 */
+    text-align: bottom;			             /* 文本的位置 */
+    padding-left: 2px;			  		
+    padding-top: 2px;
+    font-size: 50px;
+}</string>
+    </property>
+    <property name="text">
+     <string>c5</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="e1">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>250</y>
+      <width>71</width>
+      <height>281</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+    /* 按钮文本设置 */
+    text-align: bottom;			             /* 文本的位置 */
+    padding-left: 2px;			  		
+    padding-top: 2px;
+    font-size: 50px;
+}</string>
+    </property>
+    <property name="text">
+     <string>e1</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="b1">
+    <property name="geometry">
+     <rect>
+      <x>660</x>
+      <y>250</y>
+      <width>71</width>
+      <height>281</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+    /* 按钮文本设置 */
+    text-align: bottom;			             /* 文本的位置 */
+    padding-left: 2px;			  		
+    padding-top: 2px;
+    font-size: 50px;
+}</string>
+    </property>
+    <property name="text">
+     <string>b1</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="g1s">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>250</y>
       <width>51</width>
       <height>151</height>
      </rect>
@@ -354,52 +436,92 @@
 }</string>
     </property>
     <property name="text">
-     <string/>
+     <string>g1s</string>
     </property>
    </widget>
-   <widget class="QSpinBox" name="voicehigh">
+   <widget class="QPushButton" name="playButton">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>120</y>
-      <width>171</width>
+      <x>540</x>
+      <y>130</y>
+      <width>80</width>
       <height>81</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true"/>
+     <string notr="true">QPushButton{
+      border-image: url(:/picture/play.svg);
+      border: none;
+}</string>
     </property>
-    <property name="minimum">
-     <number>-3</number>
-    </property>
-    <property name="maximum">
-     <number>3</number>
+    <property name="text">
+     <string/>
     </property>
    </widget>
+   <widget class="QPushButton" name="deleteButton">
+    <property name="geometry">
+     <rect>
+      <x>670</x>
+      <y>130</y>
+      <width>80</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+      border-image: url(:/picture/delete.svg);
+      border: none;
+}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="recordButton">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>130</y>
+      <width>80</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton:!checked{
+    font-size: 20px;
+}</string>
+    </property>
+    <property name="text">
+     <string>录制</string>
+    </property>
+   </widget>
+   <zorder>b1</zorder>
+   <zorder>c1</zorder>
    <zorder>d1</zorder>
    <zorder>e1</zorder>
-   <zorder>f1</zorder>
-   <zorder>b1</zorder>
-   <zorder>g1</zorder>
-   <zorder>c5</zorder>
    <zorder>a1</zorder>
-   <zorder>c1</zorder>
-   <zorder>c1s</zorder>
-   <zorder>a1s</zorder>
-   <zorder>A2</zorder>
-   <zorder>g1s</zorder>
+   <zorder>f1</zorder>
+   <zorder>g1</zorder>
    <zorder>d1s</zorder>
    <zorder>B2</zorder>
-   <zorder>A2s</zorder>
+   <zorder>A2</zorder>
    <zorder>f1s</zorder>
+   <zorder>a1s</zorder>
+   <zorder>c1s</zorder>
+   <zorder>A2s</zorder>
    <zorder>voicehigh</zorder>
+   <zorder>c5</zorder>
+   <zorder>g1s</zorder>
+   <zorder>playButton</zorder>
+   <zorder>deleteButton</zorder>
+   <zorder>recordButton</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>905</width>
+     <width>920</width>
      <height>21</height>
     </rect>
    </property>
